# estudos

./: README.md
JS/chat_socket/: index.js  package.json
JS/graphql-tutorial/: author.js  babel.config.js  package.json  resolvers.js  schema.js  server.js
JS/node_api_mongodb/: app.js  package-lock.json  package.json
JS/nodeapi_learnin/: .env  app.js  package-lock.json  package.json
JS/react_node_fullstack/: app.js  package-lock.json  package.json
JS/react_node_fullstack_front/: package-lock.json  package.json
JS/snake/: index.html
JS/snake/css/: style.css
Java/bankAccount/: Bank.java  README.md  bank.db
Java/quizz/: Build.java  Game.java  Make.java  Quizz.java  perguntas_e_respostas.txt
Java/single/: Binary2Decimal.java  Calculator.java  Countdown.java  CsvToJson.java  Dollar2Cents.java  JBean.java  teste.csv  teste.json
Python/Relacao_de_Clientes/: databank.db  dbopr.py  main.py
Python/gimme-news/: README.md  index.js  package-lock.json  package.json  script.py
Python/jogo/: main.py
Python/soltos/: boletim.py  bot.py  calc.py  lotofacil.py  numero.py  velha.py
Rust/: expressions.rs  functions.rs  guessing_game.rs  ownership.rs  structs.rs  test.rs  users  users.rs  users.txt  variables.rs
Rust/blog/: Cargo.toml
Rust/blog/migrations/2020-11-03-185450_create_users_and_posts/: down.sql  up.sql
Rust/blog/src/: lib.rs  models.rs  schema.rs
Rust/blog/templates/: layout.html.tera
Sass/sass_udemy_course/: package-lock.json  package.json
assembly/: Makefile  asb.asm
walteralleyz.github.io/: README.md  package-lock.json  package.json
(+127 files in other folders)
