[package]
name = "blog"
version = "0.1.0"
authors = ["walteralleyz <walterdasilvasantos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
# server
rocket = "0.4.5"
rocket_codegen = "0.4.5"

serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
tera = "1.5.0"

r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
bcrypt = "0.9.0"
fake = "2.2.3"

# DB
diesel = { version = "1.4.5", features = ["postgres"] }

# SYS
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates"]
